--- a/combat/index.html
+++ b/combat/index.html
@@ -16,17 +16,18 @@
 		numScreenshots:  4 ,
 
 		unityVersion: '2018.3.1f1',
-		unityWebglBuildUrl: 'Build\/CombatOnline_v18.json',
+		unityWebglBuildUrl: 'build.json',
 
 		fileSize:  11 ,
 		cachedDecompressedFileSizes: {
-			'CombatOnline_v18.data.unityweb':  4720592 ,
-			'CombatOnline_v18.wasm.code.unityweb':  6468997 ,
-			'CombatOnline_v18.wasm.framework.unityweb':  98267 ,
+			'CombatOnline_v14.data.unityweb':  4718052 ,
+			'CombatOnline_v14.wasm.code.unityweb':  6469577 ,
+			'CombatOnline_v14.wasm.framework.unityweb':  98229 ,
 		},
 	};
 	</script>
+	
 </head>
-<body>
+<body>	
 </body>
 </html>
