--- a/combat/index.html
+++ b/combat/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -26,8 +27,18 @@
 		},
 	};
 	</script>
-	
+	<script src="/adinLoader.js"></script>
 </head>
-<body>	
+<body>
+	<script src="master-loader.js"></script>
+		<script>
+       if (typeof getAdinDomain !== 'undefined') {
+           const bodyTag = document.getElementsByTagName('body')[0];
+
+           let addAdinPreroll = document.createElement('script');
+            addAdinPreroll.src = getAdinDomain;
+            bodyTag.appendChild(addAdinPreroll);
+        }
+  </script>
 </body>
 </html>
