--- a/combat/index.html
+++ b/combat/index.html
@@ -27,7 +27,7 @@
 		},
 	};
 	</script>
-	<script src="/adinLoader.js"></script>
+	<script src="adinLoader.js"></script>
 </head>
 <body>
 	<script src="master-loader.js"></script>
