--- a/combat/index.html
+++ b/combat/index.html
@@ -16,7 +16,7 @@
 		numScreenshots:  4 ,
 
 		unityVersion: '2018.3.1f1',
-		unityWebglBuildUrl: 'build.json',
+		unityWebglBuildUrl: 'Build\/CombatOnline_v18.json',
 
 		fileSize:  11 ,
 		cachedDecompressedFileSizes: {
