--- a/madburger/index.html
+++ b/madburger/index.html
@@ -2,7 +2,7 @@
 	<head>
 		
 		<script src="MadBurger3.js"></script>
-	<script type="text/javascript" src="//m.igroutka.ru/files/scripts/scr.js"></script></head>
+	<script type="text/javascript" src="scr.js"></script></head>
 	<body style="margin:0; overflow:hidden">
 
 	</body>
