--- a/subway-surfers/index.html
+++ b/subway-surfers/index.html
@@ -6,8 +6,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Subway Surfers</title>
     <script type="text/javascript">
-        document.domain = '4399.com'
+        document.domain = 'dddavit.github.io'
     </script>
+<div class="floating" id="moreg" style="position:fixed; top: 30%; left: 0px; z-index: 10"><a target="_blank" href="https://classroomx6.github.io/" title="classroom 6x unblocked games"><img
+    src="https://vaxtangsmithanio.weebly.com/uploads/1/3/0/4/130493326/moregames1_orig.png" width="60" height="60"
+    style="cursor:pointer;" alt="classroom 6x unblocked games"></a></div>
     <script type="text/javascript" src="4399.js"></script>
     <script>
         window.config = {
