--- a/mrracer/index.html
+++ b/mrracer/index.html
@@ -22,10 +22,10 @@
 		cachedDecompressedFileSizes: {
 			'02be9d9ae1a531c86986db347028ed68.js.unityweb':  83637 ,
 			'3d66475d0720d2344c040d4ced6ed87f.wasm.unityweb':  10656949 ,
-			'MRR.loader.js':  44284 ,
+			'MRR_Poki_5.loader.js':  44284 ,
 			'b9d584e8cb4b4da7f12a62a30c8c2e81.data.unityweb':  20837749 ,
 		},
-		"metadata": {"poki_template_version":1,"background_color":"#000000","code_filename":"3d66475d0720d2344c040d4ced6ed87f.wasm.unityweb","company_name":"ChennaiGames","data_filename":"b9d584e8cb4b4da7f12a62a30c8c2e81.data.unityweb","decompression_fallback":"Gzip","development_player":"false","framework_filename":"02be9d9ae1a531c86986db347028ed68.js.unityweb","height":"600","loader_filename":"MRR.loader.js","product_name":"MR RACER","product_version":"1.5.6.2","splash_screen_style":"Dark","unity_version":"2022.3.14f1","use_data_caching":"true","use_threads":"false","use_wasm":"true","use_webgl_1_0":"false","use_webgl_2_0":"true","width":"960"}
+		"metadata": {"poki_template_version":1,"background_color":"#000000","code_filename":"3d66475d0720d2344c040d4ced6ed87f.wasm.unityweb","company_name":"ChennaiGames","data_filename":"b9d584e8cb4b4da7f12a62a30c8c2e81.data.unityweb","decompression_fallback":"Gzip","development_player":"false","framework_filename":"02be9d9ae1a531c86986db347028ed68.js.unityweb","height":"600","loader_filename":"MRR_Poki_5.loader.js","product_name":"MR RACER","product_version":"1.5.6.2","splash_screen_style":"Dark","unity_version":"2022.3.14f1","use_data_caching":"true","use_threads":"false","use_wasm":"true","use_webgl_1_0":"false","use_webgl_2_0":"true","width":"960"}
 	};
 	</script>
 <!-- will be copied to the resulting head //-->
