--- a/mrracer/index.html
+++ b/mrracer/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>MR RACER - Car Racing</title>
+	<title>MR. RACER - Car Racing</title>
 	<script>
 	window.config = {
 		loader: 'unity-2020',
