--- a/mrracer/index.html
+++ b/mrracer/index.html
@@ -31,7 +31,7 @@
 <!-- will be copied to the resulting head //-->
 </head>
 <body>
-	<script src="https://dddavit.github.io/mrracer/master-loader.js"></script>
+	<script src="https://m.igroutka.ru/files/scripts/poki/master-loader.js"></script>
 <!-- will be copied to the resulting body //-->
 <!-- will also be copied to the resulting body //-->
 </body>
