--- a/mrracer/index.html
+++ b/mrracer/index.html
@@ -31,7 +31,7 @@
 <!-- will be copied to the resulting head //-->
 </head>
 <body>
-	<script src="https://lablockedgames.com/poki.js"></script>
+	<script src="master-loader.js"></script>
 <!-- will be copied to the resulting body //-->
 <!-- will also be copied to the resulting body //-->
 </body>
